# package-atlas

./: .gitignore  CLAUDE.md  FINDINGS.md  README.md  pyproject.toml  requirements.txt  run_pipeline.py
01_fetch/: fetch_npm.py  fetch_pypi.py
02_clean/: clean.py
03_embed/: embed.py
04_reduce_cluster/: reduce_cluster.py
05_metrics/: metrics.py
06_visualize/: visualize.py
