[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "package-atlas"
version = "0.1.0"
description = "Embedding atlas mapping PyPI and npm package descriptions to find within-ecosystem redundancy"
requires-python = ">=3.11"
dependencies = [
    "httpx[asyncio]>=0.27",
    "pandas>=2.2",
    "pyarrow>=15",
    "tqdm>=4.66",
    "numpy>=1.26",
    "scipy>=1.12",
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
]

[project.optional-dependencies]
topic = ["bertopic>=0.16"]
dev = ["pip-tools>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["01_fetch*", "02_clean*", "03_embed*", "04_reduce_cluster*", "05_metrics*", "06_visualize*"]
